--- a/CalculatorUI.html
+++ b/CalculatorUI.html
@@ -9,7 +9,7 @@
         <body>
             <div class="container">
                 <div class="row">
-                  <div class="col-12 first">0</div>
+                  <div class="col-12 first">0.</div>
                 </div>
 
                 <div class="row">
